@@ -1,5 +1,4 @@
-.\" t
-.TH MF 1 "1 March 2011" "Web2C @VERSION@"
+.TH MF 1 "27 April 2015" "Web2C @VERSION@"
 .\"=====================================================================
 .if n .ds MF Metafont
 .if t .ds MF M\s-2ETAFONT\s0
@@ -18,7 +17,7 @@
 .if t .ds WB W\s-2EB\s0
 .\"=====================================================================
 .SH NAME
-mf, mf-nowin, inimf, virmf \- Metafont, a language for font and logo design
+mf, mf-nowin, inimf \- Metafont, a language for font and logo design
 .SH SYNOPSIS
 .B mf
 .RI [ options ]
