@@ -1,4 +1,4 @@
-.TH "ovf2ovp" "1" "September 2000" "Omega" "Omega" 
+.TH "OVF2OVP" "27 April 2015" "Web2C @VERSION@"
 .PP 
 .SH "NAME" 
 ovf2ovp \- convert a virtual font file and its associated font metric file into property-list format
